--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
@@ -96,6 +96,7 @@
         });
 
         settings.Columns.Add("IdCbteVta", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("CodCbteVta", "Código").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_fecha";
