--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
@@ -27,8 +27,18 @@
     }
 
     <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="codigo">Código</label>
+                    @Html.TextBoxFor(q => q.CodCbteVta, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.CodCbteVta, "", new { @class = "text-danger", @id = "CodCbteVta", @readonly = "readonly" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-6">
-
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
