--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -274,8 +274,18 @@
     </div>
 
     <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="codigo">Código</label>
+                    @Html.TextBoxFor(q => q.CodCbteVta, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.CodCbteVta, "", new { @class = "text-danger", @id = "CodCbteVta", @readonly = "readonly" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-6">
-
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
@@ -966,6 +976,27 @@
                     $("#DivMensajeCliente").hide();
                     $("#DivSuperAdmin").hide();
                 }
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function SetCodigo() {
+        var datos = {
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("SetCodigo", "Factura", new { Area = "Facturacion" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#CodCbteVta").val(data);
             },
             error: function (error) {
             }
