--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision.cshtml
@@ -87,6 +87,7 @@
         });
 
         settings.Columns.Add("IdGuiaRemision", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("CodGuiaRemision", "Código").Width = Unit.Percentage(5);
         settings.Columns.Add("IdCbteVta", "Factura").Width = Unit.Percentage(8);
         settings.Columns.Add("NumGuia_Preimpresa", "#Guia").Width = Unit.Percentage(15);
         settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(25);
