--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_facturada_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_facturada_det.cshtml
@@ -3,15 +3,15 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_proforma_det";
-        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma_det", Area = "Facturacion"};
+        settings.Name = "GridView_proforma_facturada_det";
+        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma_facturada_det", Area = "Facturacion"};
         settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Proforma", Action = "EditingAddNew", Area = "Facturacion" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Proforma", Action = "EditingUpdate", Area = "Facturacion" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Proforma", Action = "EditingDelete", Area = "Facturacion" };
+        //settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Proforma", Action = "EditingAddNew", Area = "Facturacion" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Proforma", Action = "EditingUpdate_Fact", Area = "Facturacion" };
+        //settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Proforma", Action = "EditingDelete", Area = "Facturacion" };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -20,8 +20,8 @@
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
-        settings.CommandColumn.ShowNewButtonInHeader = true;
+        settings.CommandColumn.ShowDeleteButton = false;
+        settings.CommandColumn.ShowNewButtonInHeader = false;
 
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
@@ -57,25 +57,11 @@
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdProducto";
-            column.Caption = "Producto";
-            column.Width = Unit.Percentage(15);
-            column.Visible = false;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-            column.SetEditItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<div id='ajaxDiv'>");
-                Html.RenderPartial("_CmbProducto_Proforma", DataBinder.Eval(c.DataItem, "IdProducto"));
-                ViewContext.Writer.Write("</div>");
-            });
-        });
-
-        settings.Columns.Add(column =>
-        {
             column.FieldName = "pd_cantidad";
             column.Caption = "cantidad";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(7);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
@@ -93,7 +79,7 @@
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
@@ -105,7 +91,7 @@
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
@@ -121,7 +107,7 @@
                 p.ValueType = typeof(string);
                 p.DataSource = ViewBag.lst_impuesto;
             });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
@@ -180,14 +166,14 @@
         {
             column.FieldName = "NumCotizacion";
             column.Caption = "# Cotizacion";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(7);
             column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "NumOPr";
             column.Caption = "# Orden Pedido";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(7);
             column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
@@ -222,33 +208,7 @@
         };
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdCliente'] = IdCliente.GetValue(); e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); e.customArgs['NivelDescuento'] = $('#IdNivel').val();}";
-        settings.ClientSideEvents.EndCallback = "function(s,e){ if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
+        settings.ClientSideEvents.EndCallback = "function(s,e){ if (s.IsEditing()) {var editor = IdCentroCosto;editor.Focus();}}";
     });
 }
 @grid.Bind(Model).GetHtml()
-
-<script type="text/javascript">
-    function SetPrecioProducto(s, e) {
-        var datos = {
-            IdProducto: s.GetValue(),
-            IdNivel: $('#IdNivel').val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("SetPrecioProducto", "Producto",new { Area = "Inventario" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                GridView_proforma_det.GetEditor('pd_precio').SetValue(data.precio);
-                GridView_proforma_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCodImpuesto);
-                GridView_proforma_det.GetEditor('pd_por_descuento_uni').SetValue(data.PorcentajeDesc);
-            },
-            error: function (error) {
-            }
-        });
-    };
-</script>
