--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_NotaDebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_NotaDebitoFacturacion.cshtml
@@ -83,16 +83,18 @@
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdNota", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("IdNota", "ID").Width = Unit.Percentage(5);        
+        
         settings.Columns.Add(column =>
         {
             column.FieldName = "no_fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
-            column.Width = Unit.Percentage(7);
+            column.Width = Unit.Percentage(8);
         });
-        settings.Columns.Add("Nombres", "Cliente").Width = Unit.Percentage(30);
-        settings.Columns.Add("NumNota_Impresa", "# Nota").Width = Unit.Percentage(15);
+        settings.Columns.Add("Nombres", "Cliente").Width = Unit.Percentage(25);
+        settings.Columns.Add("CodNota", "Codigo").Width = Unit.Percentage(14);
+        settings.Columns.Add("NumNota_Impresa", "# Nota").Width = Unit.Percentage(12);
         settings.Columns.Add(column =>
         {
             column.FieldName = "sc_subtotal";
