--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Modificar.cshtml
@@ -17,6 +17,7 @@
     @Html.HiddenFor(q => q.IdNumMovi)
     @Html.HiddenFor(q => q.signo)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
+    @Html.HiddenFor(q => q.IdEstadoAproba)
 
     if (ViewBag.mensaje != null)
     {
@@ -155,7 +156,7 @@
 
 
     <div class="box-footer">
-        @if (ViewBag.MostrarBoton ?? false)
+        @if (ViewBag.MostrarBoton ?? false )
         {
             <button type="submit" class="btn btn-primary">Guardar</button>
         }
