--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias_det.cshtml
@@ -61,7 +61,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdUnidadMedida";
+            column.FieldName = "IdUnidadMedida_sinConversion";
             column.Caption = "Unidad de medida";
             column.Width = Unit.Percentage(20);
             column.EditFormSettings.Visible = DefaultBoolean.True;
