--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
@@ -64,7 +64,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdUnidadMedida";
+            column.FieldName = "IdUnidadMedida_sinConversion";
             column.Caption = "Unidad de medida";
             column.Width = Unit.Percentage(20);
             column.EditFormSettings.Visible = DefaultBoolean.True;
